<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:title="@string/settings_section_title"
        android:key="@string/settings_section_key"
        android:defaultValue="@string/settings_section_default"
        android:entries="@array/section"
        android:entryValues="@array/section_values"/>

    <ListPreference
        android:title="@string/settings_order_title"
        android:key="@string/settings_order_key"
        android:entries="@array/order_by"
        android:entryValues="@array/order_by_values"
        android:defaultValue="@string/settings_order_default" />

    <EditTextPreference
        android:defaultValue="@string/settings_question_default"
        android:inputType="text"
        android:key="@string/settings_question_key"
        android:selectAllOnFocus="true"
        android:hint="e.g. 'football'"
        android:title="@string/settings_question_label" />
</PreferenceScreen>